# netsniff

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/netsniff/: capture.h  cli.h  decode.h  decode_l4.h  ifaces.h  util.h
src/: capture.c  cli.c  decode_eth.c  decode_ipv4.c  decode_ipv6.c  decode_l4.c  ifaces.c  main.c  util.c
